--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Nunito);/*!
+@import url(https://fonts.googleapis.com/css?family=Nunito:200,600);@import url(https://fonts.googleapis.com/css?family=Ruda);/*!
  * Bootstrap v4.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2018 The Bootstrap Authors
  * Copyright 2011-2018 Twitter, Inc.
@@ -10486,6 +10486,10 @@ body {
   font-size: 13px;
 }
 
+body h2 {
+  font-family: 'Nunito', sans-serif;
+}
+
 .wrapper {
   margin: 40px auto 10px auto;
   padding: 0 15px 15px 15px;
@@ -10500,13 +10504,16 @@ nav .nav-item {
   margin-right: 5px;
 }
 
+.btn-size {
+  min-width: 100px;
+}
+
 .app-footer {
   color: #fff;
   padding: 10px 0;
   margin-top: 4%;
   font-size: 11px;
-  background: #888;
-  font-family: "Segoe UI", sans-serif;
+  background: #343a40;
 }
 
 .app-footer a {
