--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -3,7 +3,6 @@ $body-bg: #f8fafc;
 
 // Typography
 $font-family-sans-serif: "Nunito", sans-serif;
-$font-family-segoe: "Segoe UI", sans-serif;
 $font-size-base: 0.875rem;
 $line-height-base: 1.6;
 $text-color: #636b6f;
@@ -12,4 +11,4 @@ $text-color: #636b6f;
 $link-hover-color: #ea4f8b;
 
 // Footer
-$footer-color: #888;
+$footer-color: #343a40;
