--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10466,6 +10466,10 @@ a.text-dark:focus {
   }
 }
 
+html {
+  font-size: 16px;
+}
+
 a,
 a:hover,
 a:focus {
@@ -10483,7 +10487,7 @@ body {
   font-family: 'Ruda', sans-serif;
   padding: 0px !important;
   margin: 0px !important;
-  font-size: 13px;
+  font-size: 0.75rem;
 }
 
 body h2 {
@@ -10506,13 +10510,22 @@ nav .nav-item {
 
 .btn-size {
   min-width: 100px;
+  margin-right: 5px;
+}
+
+table {
+  border-bottom: 1px solid #ccc;
+}
+
+table.table-striped > thead > tr > th {
+  border: none !important;
 }
 
 .app-footer {
   color: #fff;
   padding: 10px 0;
   margin-top: 4%;
-  font-size: 11px;
+  font-size: 0.625rem;
   background: #343a40;
 }
 
@@ -10522,5 +10535,35 @@ nav .nav-item {
 
 .app-footer a:hover {
   color: #ea4f8b;
+}
+
+.info {
+  background: #787878;
+  padding: 14px;
+  margin-bottom: 14px;
+  -webkit-box-shadow: 0 3px 2px #aab2bd;
+          box-shadow: 0 3px 2px #aab2bd;
+  min-width: 100%;
+}
+
+.info h3 {
+  font-size: 0.9375rem;
+  padding-top: 5px;
+}
+
+.info h5 {
+  font-size: 1.0625rem;
+}
+
+.info-message {
+  min-height: 15px;
+  padding: 15px;
+  margin-bottom: 10px;
+  background-color: #b8b8b8;
+  border: 1px solid #888;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  color: #fff;
 }
 
