--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,6 +8,11 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+// Responsive Text: http://www.standardista.com/px-to-rem-conversion-if-root-font-size-is-16px/
+html {
+  font-size: 16px;
+}
+
 a, a:hover, a:focus {
   text-decoration: none;
   outline: none;
@@ -23,7 +28,7 @@ body {
   font-family: 'Ruda', sans-serif;
   padding: 0px !important;
   margin: 0px !important;
-  font-size: 13px;
+  font-size: 0.75rem;
 
   h2 {
     font-family: 'Nunito', sans-serif;
@@ -46,6 +51,16 @@ nav .nav-item {
 
 .btn-size {
   min-width: 100px;
+  margin-right: 5px;
+}
+
+// Table
+table {
+  border-bottom: $table-border;
+}
+
+table.table-striped > thead > tr > th {
+  border: none !important;
 }
 
 // Footer
@@ -53,10 +68,39 @@ nav .nav-item {
   color: #fff;
   padding: 10px 0;
   margin-top: 4%;
-  font-size: 11px;
+  font-size: 0.625rem;
   background: $footer-color;
   
   a {color: #fff;}
 
   a:hover { color: $link-hover-color; }
+}
+
+// Information
+.info {
+  background: #787878;
+  padding: 14px;
+  margin-bottom: 14px;
+  box-shadow: 0 3px 2px #aab2bd;
+  min-width: 100%;
+
+  h3 {
+    font-size: 0.9375rem;
+    padding-top: 5px;
+  }
+
+  h5 {
+    font-size: 1.0625rem;
+  }
+}
+
+.info-message {
+  min-height: 15px;
+  padding: 15px;
+  margin-bottom: 10px;
+  background-color: #b8b8b8;
+  border: 1px solid #888;
+  border-radius: 4px;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  color: #fff;
 }
