--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -104,3 +104,8 @@ table.table-striped > thead > tr > th {
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
   color: #fff;
 }
+
+.alert {
+  width: 100%;
+  height: auto;
+}
