--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10651,3 +10651,8 @@ placeholder {
           box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
 }
 
+.information p {
+  font-size: 1rem;
+  line-height: 30px;
+}
+
