--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -172,3 +172,8 @@ placeholder {
 .bootstrap-tagsinput .badge [data-role="remove"]:hover:active {
   box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
 }
+
+.information p {
+  font-size: 1rem;
+  line-height: 30px;
+}
